{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 60,
  "lineage": "f3b6f904-e95d-d9db-2e39-a22cbed878a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b110b92d2cffc26",
            "arn": "arn:aws:ec2:us-east-1:544775090288:elastic-ip/eipalloc-06b110b92d2cffc26",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0ba3be46bffade459",
            "domain": "vpc",
            "id": "eipalloc-06b110b92d2cffc26",
            "instance": "i-0b58d2a0f9d67bbe4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0151772d7fecca533",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-100-30-83-17.compute-1.amazonaws.com",
            "public_ip": "100.30.83.17",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "eipalloc-06b110b92d2cffc26",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.nodejs-web-app",
            "aws_network_interface.jenkins",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-staging-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nodejs-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3c2399df0197038",
            "arn": "arn:aws:ec2:us-east-1:544775090288:elastic-ip/eipalloc-0e3c2399df0197038",
            "associate_with_private_ip": "10.0.3.50",
            "association_id": "eipassoc-0ba955ddf8b39723d",
            "domain": "vpc",
            "id": "eipalloc-0e3c2399df0197038",
            "instance": "i-067a79f6027ba5f5b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07bb63cfcafb5b976",
            "private_dns": "ip-10-0-3-50.ec2.internal",
            "private_ip": "10.0.3.50",
            "public_dns": "ec2-100-48-136-235.compute-1.amazonaws.com",
            "public_ip": "100.48.136.235",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "eipalloc-0e3c2399df0197038",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.nodejs-web-app",
            "aws_network_interface.nodejs-web-app",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nodejs-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544775090288:internet-gateway/igw-03cbb9ed397718298",
            "id": "igw-03cbb9ed397718298",
            "owner_id": "544775090288",
            "region": "us-east-1",
            "vpc_id": "vpc-063b889ec3b4c78df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "igw-03cbb9ed397718298",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544775090288:network-interface/eni-0151772d7fecca533",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c8be3273092684b9",
                "device_index": 0,
                "instance": "i-0b58d2a0f9d67bbe4",
                "network_card_index": 0
              }
            ],
            "id": "eni-0151772d7fecca533",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:10:9e:25:37:b1",
            "owner_id": "544775090288",
            "private_dns_name": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-016ed453a057b7fef",
              "sg-071f81e51940ae0e5",
              "sg-083a09685898a71f7",
              "sg-09fb878c023dd521b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ceb711770d6f78b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-staging-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nodejs-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544775090288:network-interface/eni-07bb63cfcafb5b976",
            "attachment": [
              {
                "attachment_id": "eni-attach-0a8f19bc6fc7a7e34",
                "device_index": 0,
                "instance": "i-067a79f6027ba5f5b",
                "network_card_index": 0
              }
            ],
            "id": "eni-07bb63cfcafb5b976",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:de:36:0a:2a:d7",
            "owner_id": "544775090288",
            "private_dns_name": "ip-10-0-3-50.ec2.internal",
            "private_ip": "10.0.3.50",
            "private_ip_list": [
              "10.0.3.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.3.50"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-071f81e51940ae0e5",
              "sg-09fb878c023dd521b",
              "sg-0ea330e31c73c5baa"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04230c2365140f583"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "allow-outgoing-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544775090288:route-table/rtb-0e7c621bc6e380327",
            "id": "rtb-0e7c621bc6e380327",
            "owner_id": "544775090288",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03cbb9ed397718298",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table Allowing Outgoing Access"
            },
            "tags_all": {
              "Name": "Route Table Allowing Outgoing Access"
            },
            "timeouts": null,
            "vpc_id": "vpc-063b889ec3b4c78df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "rtb-0e7c621bc6e380327",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.nodejs-web-app",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073b2703ddff66ae9",
            "region": "us-east-1",
            "route_table_id": "rtb-0e7c621bc6e380327",
            "subnet_id": "subnet-0ceb711770d6f78b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "rtbassoc-073b2703ddff66ae9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.nodejs-web-app",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0157183ce67580c4f",
            "region": "us-east-1",
            "route_table_id": "rtb-0e7c621bc6e380327",
            "subnet_id": "subnet-04230c2365140f583"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "rtbassoc-0157183ce67580c4f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.nodejs-web-app",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544775090288:security-group/sg-071f81e51940ae0e5",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071f81e51940ae0e5",
            "ingress": [],
            "name": "allow-all-outbound",
            "name_prefix": "",
            "owner_id": "544775090288",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063b889ec3b4c78df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "sg-071f81e51940ae0e5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-jenkins-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544775090288:security-group/sg-016ed453a057b7fef",
            "description": "Allow jenkins inbound traffic",
            "egress": [],
            "id": "sg-016ed453a057b7fef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-jenkins-traffic",
            "name_prefix": "",
            "owner_id": "544775090288",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063b889ec3b4c78df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "sg-016ed453a057b7fef",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544775090288:security-group/sg-09fb878c023dd521b",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-09fb878c023dd521b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-traffic",
            "name_prefix": "",
            "owner_id": "544775090288",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063b889ec3b4c78df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "sg-09fb878c023dd521b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-staging-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544775090288:security-group/sg-083a09685898a71f7",
            "description": "Allow Inbound traffic for security checks",
            "egress": [],
            "id": "sg-083a09685898a71f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Staging",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "allow-stagin-traffic",
            "name_prefix": "",
            "owner_id": "544775090288",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063b889ec3b4c78df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "sg-083a09685898a71f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544775090288:security-group/sg-0ea330e31c73c5baa",
            "description": "Allow HTTP / HTTPS inbound traffic",
            "egress": [],
            "id": "sg-0ea330e31c73c5baa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-web-traffic",
            "name_prefix": "",
            "owner_id": "544775090288",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063b889ec3b4c78df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "sg-0ea330e31c73c5baa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544775090288:subnet/subnet-0ceb711770d6f78b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ceb711770d6f78b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544775090288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Jenkins Subnet"
            },
            "tags_all": {
              "Name": "Jenkins Subnet"
            },
            "vpc_id": "vpc-063b889ec3b4c78df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "subnet-0ceb711770d6f78b8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544775090288:subnet/subnet-04230c2365140f583",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04230c2365140f583",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544775090288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "nodejs Web App Subnet"
            },
            "tags_all": {
              "Name": "nodejs Web App Subnet"
            },
            "vpc_id": "vpc-063b889ec3b4c78df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "subnet-04230c2365140f583",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nodejs-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544775090288:vpc/vpc-063b889ec3b4c78df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad523d44b54deef0",
            "default_route_table_id": "rtb-0c3a75bfe8eabc4e6",
            "default_security_group_id": "sg-00e6fefc424584f45",
            "dhcp_options_id": "dopt-0400f6f6ad1e11702",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063b889ec3b4c78df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3a75bfe8eabc4e6",
            "owner_id": "544775090288",
            "region": "us-east-1",
            "tags": {
              "Name": "nodejs Web App VPC"
            },
            "tags_all": {
              "Name": "nodejs Web App VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "vpc-063b889ec3b4c78df",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.application-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05e411cf591b5c9f6",
            "arn": "arn:aws:ec2:us-east-1:544775090288:instance/i-067a79f6027ba5f5b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nodejs-web-app",
            "id": "i-067a79f6027ba5f5b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nodejs-web-app",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-07bb63cfcafb5b976"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-07bb63cfcafb5b976"
              }
            ],
            "primary_network_interface_id": "eni-07bb63cfcafb5b976",
            "private_dns": "ip-10-0-3-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.50",
            "public_dns": "ec2-100-48-136-235.compute-1.amazonaws.com",
            "public_ip": "100.48.136.235",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f41a6a9510e13d6d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04230c2365140f583",
            "tags": {
              "Name": "nodejs Web App"
            },
            "tags_all": {
              "Name": "nodejs Web App"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-071f81e51940ae0e5",
              "sg-09fb878c023dd521b",
              "sg-0ea330e31c73c5baa"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "i-067a79f6027ba5f5b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_ecr_repository.nodejs-web-app",
            "aws_iam_instance_profile.nodejs-web-app",
            "aws_iam_policy.ecr-access",
            "aws_iam_role.nodejs-web-app",
            "aws_key_pair.nodejs-web-app-key",
            "aws_network_interface.nodejs-web-app",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:544775090288:instance/i-0b58d2a0f9d67bbe4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins",
            "id": "i-0b58d2a0f9d67bbe4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0151772d7fecca533"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-0151772d7fecca533"
              }
            ],
            "primary_network_interface_id": "eni-0151772d7fecca533",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-100-30-83-17.compute-1.amazonaws.com",
            "public_ip": "100.30.83.17",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d7aa527b35995483",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ceb711770d6f78b8",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-016ed453a057b7fef",
              "sg-071f81e51940ae0e5",
              "sg-083a09685898a71f7",
              "sg-09fb878c023dd521b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "544775090288",
            "id": "i-0b58d2a0f9d67bbe4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_ecr_repository.nodejs-web-app",
            "aws_ecr_repository.nodejs-web-app-staging",
            "aws_ecr_repository.nodejs-web-app-test",
            "aws_eip.jenkins",
            "aws_iam_instance_profile.jenkins",
            "aws_iam_instance_profile.nodejs-web-app",
            "aws_iam_policy.ec2-access",
            "aws_iam_policy.ecr-access",
            "aws_iam_policy.s3-access",
            "aws_iam_policy.secrets-access",
            "aws_iam_role.jenkins",
            "aws_iam_role.nodejs-web-app",
            "aws_internet_gateway.nodejs-web-app",
            "aws_key_pair.jenkins-key",
            "aws_key_pair.nodejs-web-app-key",
            "aws_network_interface.jenkins",
            "aws_network_interface.nodejs-web-app",
            "aws_s3_bucket.jenkins-config",
            "aws_s3_bucket.nodejs-web-app-logs",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-staging-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.nodejs-web-app",
            "module.application-server.aws_instance.default",
            "random_id.job-id"
          ]
        }
      ]
    }
  ]
}